# kattis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-setup.yml
src/kattis/: dagatal.py  dfryrirdreki.py  goggi.py  lvable.py  oddecho.py  quadrant.py  secondopinion.py  sequences.py  stararrangements.py  twostones.py
tests/: test_dagatal.py  test_dfryrirdreki.py  test_goggi.py
