[project]
name = "kattis"
version = "0.1.0"
description = ""
authors = [
    {name = "Kélian PONS",email = "kelian.pons@centrale.centralelille.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "kattis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
